--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Ab4d.SharpEngine.Samples.Web</a>
+        <a class="navbar-brand" href="">Ab4d.SharpEngine.Samples.BlazorWebAssembly</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
