--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/_Imports.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Ab4d.SharpEngine.Samples.Web
-@using Ab4d.SharpEngine.Samples.Web.Layout
+@using Ab4d.SharpEngine.Samples.BlazorWebAssembly
+@using Ab4d.SharpEngine.Samples.BlazorWebAssembly.Layout
