--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -45,6 +45,12 @@
     <input type="checkbox" checked="checked" @onchange="OnUseCameraLightCheckBoxChanged" />
     Use camera light (shines from the position of the camera; when unchecked then a fixed directional light is used)
 </label>
+<br />
+
+<label>
+    <input type="checkbox" @bind="_showRenderTimes" />
+    Show render times in DevTools (F12) Console
+</label>
 
 <br />
 <br />
@@ -61,13 +67,13 @@
 
 <br />
 <p>@_infoText</p>
-<p>Check Console in the DevTools (F12) to see render times.</p>
 
 @code {
     // BOUND FIELDS:
     private string _infoText = "Initializing...";
     private string _cameraRotationButtonText = "Start camera rotation";
     private bool _useCameraLight = true;
+    private bool _showRenderTimes = true;
 
     private SharpEngineSceneView sharpEngineSceneView = null!;
 
@@ -106,6 +112,8 @@
         var sceneView     = sharpEngineSceneView.SceneView;
         var canvasInterop = sharpEngineSceneView.CanvasInterop;
 
+
+        // Use CanvasInterop to subscribe to canvas pointer moved event
         canvasInterop.PointerMoved += (sender, args) =>
         {
             var hitObject = sceneView.GetClosestHitObject(args.MouseX, args.MouseY);
@@ -122,8 +130,6 @@
         };
 
 
-        scene.SetAmbientLight(0.2f);
-
         _targetPositionCamera = new TargetPositionCamera()
         {
             Heading = 30,
@@ -131,7 +137,6 @@
             Distance = 300,
             TargetPosition = new Vector3(0, 0, 0),
             ShowCameraLight = ShowCameraLightType.Auto,
-            //ProjectionType = ProjectionTypes.Orthographic // uncomment to use orthographic projection instead of perspective 
         };
 
         sceneView.Camera = _targetPositionCamera;
@@ -145,6 +150,12 @@
             IsPinchZoomEnabled = true, // zoom with touch pinch gesture
             IsPinchMoveEnabled = true  // move camera with two fingers
         };
+
+
+        sceneView.SceneRendered += (sender, args) => UpdateRenderTime();
+
+
+        scene.SetAmbientLight(0.2f);
 
 
         float hashModelSize = 100;
@@ -197,6 +208,13 @@
         }
 
         ShowInfoMessage("Initial 3D scene shown");
+    }
+
+    private void UpdateRenderTime()
+    {
+        var statistics = sharpEngineSceneView.SceneView.Statistics;
+        if (_showRenderTimes && statistics != null)
+            Console.WriteLine($"RenderTime: {statistics.TotalRenderTimeMs:F2} ms");
     }
 
     private void SelectSceneNode(SceneNode? sceneNode)
