Set sceneView.BackgroundColor

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -130,6 +130,8 @@
         };
 
 
+        sceneView.BackgroundColor = Colors.LightSkyBlue;
+
         _targetPositionCamera = new TargetPositionCamera()
         {
             Heading = 30,
