Updated page titles

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
@@ -11,7 +11,7 @@
 @inject IJSRuntime JS  
 @implements IDisposable
 
-<PageTitle>Manual Initialization</PageTitle>
+<PageTitle>Ab4d.SharpEngine.Web - Manual Initialization</PageTitle>
 
 <h1>Ab4d.SharpEngine.Web</h1>
 
