--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -9,7 +9,7 @@
 @using Ab4d.SharpEngine.Lights
 @using Ab4d.SharpEngine.Meshes
 
-<PageTitle>Quick start</PageTitle>
+<PageTitle>Ab4d.SharpEngine.Web - Quick start</PageTitle>
 
 <h1>Ab4d.SharpEngine.Web</h1>
 
