--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -135,8 +135,8 @@
         _targetPositionCamera = new TargetPositionCamera()
         {
             Heading = 30,
-            Attitude = -40,
-            Distance = 300,
+            Attitude = -30,
+            Distance = 400,
             TargetPosition = new Vector3(0, 0, 0),
             ShowCameraLight = ShowCameraLightType.Auto,
         };
@@ -159,18 +159,17 @@
 
         scene.SetAmbientLight(0.2f);
 
-
         float hashModelSize = 100;
         float hashModelBarThickness = 16;
         float hashModelBarOffset = 20;
 
         var hashSymbolMesh = MeshFactory.CreateHashSymbolMesh(centerPosition: new Vector3(0, hashModelBarThickness * 0.5f, 0),
-                                                              shapeYVector: new Vector3(0, 0, 1),
-                                                              extrudeVector: new Vector3(0, hashModelBarThickness, 0),
-                                                              size: hashModelSize,
-                                                              barThickness: hashModelBarThickness,
-                                                              barOffset: hashModelBarOffset,
-                                                              name: "HashSymbolMesh");
+        shapeYVector: new Vector3(0, 0, 1),
+        extrudeVector: new Vector3(0, hashModelBarThickness, 0),
+        size: hashModelSize,
+        barThickness: hashModelBarThickness,
+        barOffset: hashModelBarOffset,
+        name: "HashSymbolMesh");
 
         _hashMaterial = new StandardMaterial(diffuseColor: Color3.FromByteRgb(255, 197, 0));
         //_hashMaterial = new StandardMaterial(diffuseColor: Colors.Silver);
@@ -198,7 +197,7 @@
             MajorLinesFrequency = 5,
 
             IsClosed = true,
-        };
+            };
         scene.RootNode.Add(wireGridNode);
 
 
@@ -209,7 +208,42 @@
             scene.RootNode.Add(sphereModelNode1);
         }
 
+
+        if (sharpEngineSceneView.IsInitialized)
+            AddTexturePlane();
+        else
+            sharpEngineSceneView.SceneViewInitialized += (sender, args) => AddTexturePlane();
+
+
         ShowInfoMessage("Initial 3D scene shown");
+    }
+
+    private void AddTexturePlane()
+    {
+        var gpuDevice = sharpEngineSceneView.Scene.GpuDevice;
+        if (gpuDevice == null)
+            return;
+
+        Ab4d.SharpEngine.Utilities.TextureLoader.CreateTexture("ab4d-logo-256.png", gpuDevice, gpuImage =>
+        {
+            var textureMaterial = new StandardMaterial(gpuImage)
+            {
+                HasTransparency = true,
+            };
+
+            var planeModelNode = new PlaneModelNode(centerPosition: new Vector3(0, 30, -150), 
+                                                    size: new Vector2(60, 60), 
+                                                    normal: new Vector3(0, 0, 1), 
+                                                    heightDirection: new Vector3(0, 1, 0), 
+                                                    name: "TexturePlane")
+            {
+                IsHitTestVisible = false,
+                Material = textureMaterial,
+                BackMaterial = textureMaterial,
+            };
+
+            sharpEngineSceneView.Scene.RootNode.Add(planeModelNode);
+        });
     }
 
     private void UpdateRenderTime()
